api/k8s/redis.yaml
apiVersion: apps/v1 # API version
kind: Deployment
metadata:
  name: redis
  labels:
    app: mludolph-dev-redis
spec:
  selector:
    matchLabels:
      app: mludolph-dev-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: mludolph-dev-redis
    spec: # Spec for the container which will be run inside the Pod.
      containers:
        - name: mludolph-dev-redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: mludolph-dev-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: mludolph-dev-redis
