api/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mludolph-dev-api
  labels:
    app: mludolph-dev-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mludolph-dev-api
  template:
    metadata:
      labels:
        app: mludolph-dev-api
    spec:
      containers:
        - name: mludolph-dev-api
          image: cr.mludolph.dev/mludolph-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env: # Environment variables passed to the container
            - name: AUTH_API_KEYS
              valueFrom:
                secretKeyRef:
                  name: mludolph.dev-secrets
                  key: api_keys
            - name: TELEGRAM_TOKEN
              valueFrom:
                secretKeyRef:
                  name: mludolph.dev-secrets
                  key: telegram_token
            - name: TELEGRAM_CHAT_ID
              valueFrom:
                secretKeyRef:
                  name: mludolph.dev-secrets
                  key: telegram_chat_id
          resources: {}
      imagePullSecrets:
        - name: registry-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: mludolph-dev-api
  labels:
    app: mludolph-dev-api
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mludolph-dev-api

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mludolph-dev-api-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.mludolph.dev`)
      kind: Rule
      services:
        - name: mludolph-dev-api
          port: 80
  tls:
    certResolver: le
